--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@tiptap/extension-text-align": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "file-saver": "^2.0.5",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
